--- a/template.html
+++ b/template.html
@@ -18,12 +18,16 @@
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
         ga('create', 'UA-87811433-3', 'auto');
         ga('send', 'pageview');
-
     </script>
 </head>
 <body>
 	<nav>
-		 
+		 <a href="/"><img id="brand" src="/assets/logczo/Logo_X1.png" width="52" height="52" alt="logo and home button"></a>
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="/about/">About</a>
+        <a href="/schedule/">Schedule</a>
+        <a href="/downloads/">Downloads</a>
+        <a href="/contact/">Contact</a>
 	</nav>
 	<div id="content-main">
 		
