--- a/template.html
+++ b/template.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 	<nav>
-		 <a href="/"><img id="brand" src="/assets/logczo/Logo_X1.png" width="52" height="52" alt="logo and home button"></a>
+		 <a href="/"><img id="brand" src="/assets/logo/Logo_X1.png" width="52" height="52" alt="logo and home button"></a>
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="/about/">About</a>
         <a href="/schedule/">Schedule</a>
