--- a/template.html
+++ b/template.html
@@ -19,9 +19,14 @@
         ga('create', 'UA-87811433-3', 'auto');
         ga('send', 'pageview');
     </script>
+    <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <!-- Custom Css Below-->
+    <script src="/js/topnav.js"></script>
+    <link href="/css/primary.css" rel="stylesheet" type="text/css">
+    <link href="/css/topnav.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<nav>
+	<nav class="topnav">
 		 <a href="/"><img id="brand" src="/assets/logo/Logo_X1.png" width="52" height="52" alt="logo and home button"></a>
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="/about/">About</a>
@@ -32,5 +37,8 @@
 	<div id="content-main">
 		
 	</div>
+	<script src="/js/jquery-1.11.3.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <footer><p>SanTech</p></footer>
 </body>
 </html>
