--- a/template.html
+++ b/template.html
@@ -19,11 +19,11 @@
         ga('create', 'UA-87811433-3', 'auto');
         ga('send', 'pageview');
     </script>
-    <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!-- Custom Css Below-->
-    <script src="/js/topnav.js"></script>
-    <link href="/css/primary.css" rel="stylesheet" type="text/css">
-    <link href="/css/topnav.css" rel="stylesheet" type="text/css">
+    <script src="js/topnav.js"></script>
+    <link href="css/primary.css" rel="stylesheet" type="text/css">
+    <link href="css/topnav.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<nav class="topnav">
@@ -37,8 +37,8 @@
 	<div id="content-main">
 		
 	</div>
-	<script src="/js/jquery-1.11.3.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+	<script src="js/jquery-1.11.3.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <footer><p>SanTech</p></footer>
 </body>
 </html>
