--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         ga('create', 'UA-87811433-3', 'auto');
         ga('send', 'pageview');
     </script>
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/SanTechV5css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!-- Custom Css Below-->
-    <script src="js/topnav.js"></script>
-    <link href="css/primary.css" rel="stylesheet" type="text/css">
-    <link href="css/topnav.css" rel="stylesheet" type="text/css">
+    <script src="/SanTechV5js/topnav.js"></script>
+    <link href="/SanTechV5css/primary.css" rel="stylesheet" type="text/css">
+    <link href="/SanTechV5css/topnav.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<nav class="topnav">
-		 <a href="/"><img id="brand" src="/assets/logo/Logo_X1.png" width="52" height="52" alt="logo and home button"></a>
+		 <a href="/"><img id="brand" src="/SanTechV5/assets/logo/Logo_X1.png" width="52" height="52" alt="logo and home button"></a>
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="/about/">About</a>
         <a href="/schedule/">Schedule</a>
